[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/sounds/play actors/478051__deleted_user_10023915__land1.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/sprites/play_actor_sprites/STELLA COMP SPRITES.png" type="Texture" id=2]
[ext_resource path="res://src/menusandui/healthbarStella.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/play_actors/StellaComp.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/level_item_sprites/Floater Active.PNG" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 2940, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 3360, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 3780, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 2520, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 2100, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 420, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 840, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 1680, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 1260, 0, 420, 420 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 1260, 420, 420, 420 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 1680, 420, 420, 420 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 0, 420, 420, 420 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 420, 420, 420, 420 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 840, 420, 420, 420 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 37 ) ],
"loop": false,
"name": "Climbidle",
"speed": 0.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "Climbing",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": false,
"name": "Dead",
"speed": 0.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": false,
"name": "Hurt",
"speed": 0.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
}, {
"frames": [ SubResource( 45 ) ],
"loop": false,
"name": "Jumpgoesdown",
"speed": 0.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": false,
"name": "Jumpgoesup",
"speed": 0.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "Pushing",
"speed": 3.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 49 ), SubResource( 51 ) ],
"loop": true,
"name": "Running",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 123.5 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 807, 349 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 349, 807, 349 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "CompHurt"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("StellaHurtbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StellaHurtbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 121 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 4.5, 119 )

[node name="StellaComp" type="KinematicBody2D" groups=["protagonists"]]
z_index = 13
collision_layer = 2
collision_mask = 8972
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -151 )
scale = Vector2( 0.72, 0.72 )
frames = SubResource( 36 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -123.5 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthbarStella" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = 64.0
margin_top = 102.0
margin_right = 223.0
margin_bottom = 137.0

[node name="FloaterActive" type="AnimatedSprite" parent="."]
position = Vector2( 0, -276 )
scale = Vector2( 0.111381, 0.111381 )
frames = SubResource( 35 )
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CompHurt = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -162 )
scale = Vector2( 4, 4 )
enabled = true
cast_to = Vector2( 0, 47 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="StellaHurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="StellaHurtbox"]
position = Vector2( -1.5, -123.5 )
shape = SubResource( 2 )

[node name="CheckpointTween" type="Tween" parent="."]

[node name="PushDetector" type="Area2D" parent="." groups=["PushDetector"]]
position = Vector2( 53, 0 )
collision_layer = 2
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushDetector"]
position = Vector2( 0, -122 )
shape = SubResource( 32 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -4.095
pitch_scale = 2.83
bus = "Sound"

[connection signal="area_entered" from="StellaHurtbox" to="." method="_on_StellaHurtbox_area_entered"]
[connection signal="area_entered" from="PushDetector" to="." method="_on_PushDetector_area_entered"]
[connection signal="area_exited" from="PushDetector" to="." method="_on_PushDetector_area_exited"]
